--- a/service/package.json
+++ b/service/package.json
@@ -9,7 +9,11 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "NODE_ENV=dev PORT=3000 nest start --watch",
+    "start:dev:1": "NODE_ENV=dev PORT=3001 nest start --watch",
+    "start:dev:2": "NODE_ENV=dev PORT=3002 nest start --watch",
+    "start:dev:3": "NODE_ENV=dev PORT=3003 nest start --watch",
+    "start:dev:4": "NODE_ENV=dev PORT=3004 nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -38,6 +42,7 @@
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/throttler": "^5.0.1",
     "@nestjs/typeorm": "^10.0.1",
+    "aws-sdk": "^2.1506.0",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "bull": "^4.11.5",
@@ -46,10 +51,12 @@
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
     "express-session": "^1.17.3",
     "helmet": "^7.1.0",
     "mongoose": "^8.0.1",
     "mysql2": "^3.6.5",
+    "nest-aws-sdk": "^3.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
