--- a/service/tsconfig.json
+++ b/service/tsconfig.json
@@ -6,6 +6,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+		"allowJs": true,
     "target": "ES2021",
     "sourceMap": true,
     "outDir": "./dist",
@@ -17,5 +18,9 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+	"include": [
+    "src/**/*",
+		"./src/module/payment/application/service/iyzipay.d.ts"
+	]
 }
