[DEV] switch yarn 4 & mysql module & cache module

--- a/service/.env
+++ b/service/.env
@@ -1,21 +1,21 @@
 NAME=
 
 MONGODB_URI=mongodb://127.0.0.1:27017
-MONGODB_NAME=nest
+MONGODB_DATABASE=nest
 MONGODB_HOST=localhost
 MONGODB_PORT=27017
 MONGODB_USER=
 MONGODB_PASSWORD=
 
 MYSQL_URI=
-MYSQL_NAME=
+MYSQL_DATABASE=
 MYSQL_HOST=
 MYSQL_PORT=
 MYSQL_USER=
 MYSQL_PASSWORD=
 
 REDIS_TTL=1000
-REDIS_HOST=redis_server
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
