--- a/service/.env.development
+++ b/service/.env.development
@@ -1,14 +1,14 @@
 NAME=
 
 MONGODB_URI=mongodb://127.0.0.1:27017
-MONGODB_NAME=nest
+MONGODB_DATABASE=nest
 MONGODB_HOST=localhost
 MONGODB_PORT=27017
 MONGODB_USER=
 MONGODB_PASSWORD=
 
 MYSQL_URI=
-MYSQL_NAME=
+MYSQL_DATABASE=
 MYSQL_HOST=
 MYSQL_PORT=
 MYSQL_USER=
